Fixed flickering and removed snapped bg

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -300,7 +300,6 @@ input[type=password] {
 ====================================*/
 
 body {
-  overflow: hidden;
   font-family: 'proxima-nova', sans-serif;
   background: #FFF;
   height: 100%;
@@ -486,7 +485,6 @@ body {
 .order .bg {
   width: 100%;
   height: 90%;
-  position: absolute;
   z-index: 0;
 }
 
